deployment-label01.yml
apiVersion: v1
kind: Pod
metadata:
  name: label-01
  labels:
    environment: production
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
