deployment-secret02.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secretapp
  labels:
    app: secretapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secretapp
  template:
    metadata:
      labels:
        app: secretapp
    spec:
      containers:
      - name: testapp
        image: arisu1000/simple-container-app:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: volume-secret
          mountPath: "/etc/volume-secret" # (1)
          readOnly: true # (2)
      volumes:
      - name: volume-secret
        secret:
          secretName: user-pass-yaml # (3)

# (1) 컨테이너의 디렉터리를 설정해 시크릿 설정 내용을 파일형태로 저장한다.
# (2) 볼륨을 읽기 전용으로 사용한다.
# (3) 앞서만든 user-pass-yaml 파일을 시크릿으로 설정한다.
