deployment-secret03.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secretapp
  labels:
    app: secretapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secretapp
  template:
    metadata:
      labels:
        app: secretapp
    spec:
      containers:
      - name: testapp
        image: arisu1000/private-test:latest # (1) 
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: dockersecret

# (1) 별도의 컨테이너를 생성해야하는데 용량이 없으므로 그냥 둔다. 하지만 재 실습시에는 프라이빗한 컨테이너로 실행해볼것.
