deployment-v1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-testapp
  labels:
    app: myapp
    version: stable
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
      version: stable
  template:
    metadata:
      labels:
        app: myapp
        version: stable
    spec:
      containers:
      - name: testapp
        image: arisu1000/simple-container-app:v0.1
        ports:
        - containerPort: 8080
        #
