echoserver-pods.yml
apiVersion: v1
kind: Pod
metadata:
  name: echoserver-pods # (1)
  labels:
    app: echoserver-pods # (2)
spec:
  containers:
  - name: echoserver # (3)
    image: arisu1000/simple-container-app:latest # (4)
    ports:
    - containerPort: 8080  # (5)

    # (1) .metadata.name: 파드 이름
    # (2) .metadata.labes.app: 오브젝트를 식별하는 레이블 파드가 앱컨테이너이고, 이름은 kubernetes-simple-pod라는 것을 설명
    # (3) .spec.containers[].name: 컨테이너 이름
    # (4) .spec.containers[].image: 컨테이너에서 사용하는 이미지 
    # (5) .spec.containers[].ports[].containerPort: 해당 컨테이너에 접속할 포트  

    # 코멘트 한글로 수정
