kube-practice-pods.yml
apiVersion: v1
kind: Pod
metadata:
  name: kube-practice-pods
  labels:
    app: kube-practice-pods
spec:
  containers:
  - name: myapp-container
    image: busybox:1.28
    command: ['sh', '-c', 'echo The app is running! && sleep 3600']
