pod-env.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-env
  labels:
    app: pod-env
spec:
  containers:
  - name: pod-env
    image: arisu1000/simple-container-app:latest
    ports:
    - containerPort: 8080
