deployment-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configapp
  labels:
    app: configapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: configapp
  template:
    metadata:
      labels:
        app: configapp
    spec:
      containers:
      - name: testapp
        image: arisu1000/simple-container-app:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: configapp
  name: configapp-svc
  namespace: default
spec:
  ports:
  - nodePort: 30800
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: configapp
  type: NodePort

# (1) 환경변수값을 debug_level로 설정
# (2) 필드값을 ㅇ디에서 가져올지 지정하는곳이고 앞에서 만들어 두었던 config-dev를 불러온다.
# (3) 필드값으로 debug_info 필드를 설정해 data.debug_info 필드만 불러왔다.
