headless-service.yml
apiVersion: v1
kind: Service
metadata:
    name: headless-service
spec:
    type: ClusterIP
    clusterIP: None
    selector:
      app: nginx-for-svc
    ports:
    - protocol: TCP
      port: 80
      targetPort: 80
