myapp-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myapp
  name: myapp-svc
  namespace: default
spec:
  ports:
  - nodePort: 30880
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: myapp
  type: NodePort
