service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: ClusterIP # (1)
  clusterIP: 10.0.10.10 # (2)
  selector:
    app: MyApp
  ports:
    - protocol: TCP
      port: 80 # (3)
      targetPort: 9376

      # (1) 필드값을 설정하지 않으면 ClusterIP가 기본이다.
      # (2) 클러스터 IP를 직접 설정한다. 설정하지 않으면 임의값의 IP가 할당된다.
      # (3) 포트 여러개를 외부에 제공할 때는 필드에 설정하면 외부에 제공할수있다.
